# eqgat

./: .gitignore  CODEOWNERS  LICENSE  README.md  environment.yml  setup.cfg  setup.py
eqgat/: README.md  modules.py
eqgat/convs/: __init__.py  eqgat.py  gvp.py  painn.py  schnet.py
eqgat/models/: __init__.py  eqgat.py  gvp.py  painn.py  schnet.py
eqgat/segnn/: README.md  balanced_irreps.py  instance_norm.py  o3_building_blocks.py  seconv.py  segnn.py
experiments/: model.py  utils.py
experiments/lba/: README.md  data.py  train.py
experiments/ppi/: README.md  data.py  neighbors.py  train.py
experiments/psr/: README.md  data.py  train.py
experiments/res/: README.md  data.py  train.py
experiments/rsr/: README.md  data.py  train.py
experiments/synthetic/: README.md  data.py  train.py  visualize_triangle_dataset.ipynb
